--- a/search.html
+++ b/search.html
@@ -193,7 +193,7 @@
                         <li class="yui3-u-1-5" v-for="goods in goodsList" :key="goods.id">
                             <div class="list-wrap">
                                 <div class="p-img">
-                                    <a href="item.html" target="_blank"><img :src="goods.selectedSku.image"
+                                    <a :href="'/item/'+goods.id+'.html'" target="_blank"><img :src="goods.selectedSku.image"
                                                                              height="200"/></a>
                                     <ul class="skus">
                                         <li :class="{selected:goods.selectedSku.id===sku.id}"
