--- a/register.html
+++ b/register.html
@@ -67,21 +67,21 @@
                 </div>
 
                 <div class="control-group">
-                    <label class="control-label">手机号：</label>
+                    <label class="control-label">邮箱：</label>
                     <div class="controls">
-                        <input type="text" placeholder="请输入你的手机号" class="input-xfat input-xlarge"
-                               v-model="user.phone" name="phone" data-vv-as="手机号"
-                               v-validate="{required:true,regex:/^1[35678]\d{9}$/,useful:2}">
+                        <input type="text" placeholder="请输入你的邮箱" class="input-xfat input-xlarge"
+                               v-model="user.mail" name="mail" data-vv-as="邮箱"
+                               v-validate="{required:true,regex:/^[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*\.[a-zA-Z0-9]{2,6}$/,useful:2}">
                     </div>
-                    <span style="color: red;">{{ errors.first('phone') }}</span>
+                    <span style="color: red;">{{ errors.first('mail') }}</span>
                 </div>
                 <div class="control-group">
-                    <label class="control-label">短信验证码：</label>
+                    <label class="control-label">验证码：</label>
                     <div class="controls">
                         <input type="text" placeholder="短信验证码" class="input-xfat input-xlarge" style="width: 120px;"
                                v-model="user.code" name="code" v-validate="'required'" data-vv-as="验证码">
                         <span class="code-span" @click="createVerifyCode">
-                               获取短信验证码
+                               获取验证码
                         </span>
                     </div>
                     <span style="color: red;">{{ errors.first('code') }}</span>
@@ -149,7 +149,7 @@
                 username: '',
                 password: '',
                 confirmPassword: '',
-                phone: '',
+                mail: '',
                 code: ''
             },
             check: {
@@ -159,7 +159,7 @@
         created() {
             this.$validator.extend('useful', {
                 getMessage(field, args, data) {
-                    return args[0] === '1' ? '用户名' + data : '手机' + data;
+                    return args[0] === '1' ? '用户名' + data : '邮箱' + data;
                 },
                 validate(value, args) {
                     return new Promise(resolve => {
@@ -184,9 +184,9 @@
         },
         methods: {
             createVerifyCode() {// 生成短信验证码
-                this.$validator.validate("phone").then(r => {
+                this.$validator.validate("mail").then(r => {
                     if (r) {
-                        leyou.http.post("/user/send", "phone=" + this.user.phone);
+                        leyou.http.post("/user/code", "mail=" + this.user.mail);
                     }
                 });
 
